# AOC2024

./: .gitattributes  README.md
.github/workflows/: python-tests.yaml  uiua-tests.yaml
AOC/Python/: .gitignore  Makefile  README.md  pyproject.toml
AOC/Python/helpers/: __main__.py  generate_files.py
AOC/Python/models/: aoc_solution.py
AOC/Python/solutions/: day_01.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_10.py  day_12.py  day_13.py  day_14.py  day_15.py
AOC/Python/tests/: test_solutions.py
AOC/Uiua/solutions/: day01.ua  day02.ua  day03.ua  day04.ua  day05.ua  day06.ua  day07.ua  day08.ua  day09.ua  day10.ua  day11.ua  day13.ua  day14.ua
AOC/python/: debug.json  temp_day_21.sh
AOC/python/helpers/: __main__.py  generate_files.py  grid_helpers.py
AOC/python/models/: aoc_solution.py
AOC/python/solutions/: day_02.py  day_03.py  day_04.py  day_06.py  day_09.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_17.py  day_18.py  day_19.py  day_20.py  day_21.py  day_22.py  day_23.py  day_24.py  day_25.py
AOC/python/tests/: test_solutions.py
AOC/uiua/: README.md
AOC/uiua/helpers/: input.ua
AOC/uiua/solutions/: day01.ua  day02.ua  day06.ua  day08.ua  day09.ua  day10.ua  day12.ua  day13.ua  day16.ua  day17.ua  (+5 more)
AOT/: README.md  package-lock.json  package.json
AOT/solutions/: day-03.ts  day-04.ts  day-05.ts  day-06.ts  day-07.ts  day-08.ts  day-10.ts  day-11.ts  day-12.ts  day-13.ts  day-14.ts  day-15.ts  day-16.ts
AOT/tests/: day-01.ts  day-02.ts  day-03.ts  day-04.ts  day-10.ts  day-12.ts  day-16.ts
(+1 files in other folders)
