[project]
name = "aoc2024"
version = "0.1.0"
description = "Python solutions to Advent of Code 2024"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
    "ruff>=0.8.1",
]
